--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.3",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "styled-components": "^6.1.19",
